dataset1235/2025-2/1379599236/users/1049735031/executions/2110095464_795845062.log
== SUBMISSION (2025-08-26 17:50:14)
-- CODE: 
n1 = float(inputt())
n2 = float(input())
n3 = float(input())

ml = n1 * 25/100
mt = n2 * 30/100
mp = n3 * 45/100

nf = (ml + mt + mp)

print(round(nf, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.8
3.2
7.6
---- correct output:
5.58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float(inputt())
               ^^^^^^
NameError: name 'inputt' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
7.5
5.3
8.6
---- correct output:
7.33
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float(inputt())
               ^^^^^^
NameError: name 'inputt' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float(inputt())
               ^^^^^^
NameError: name 'inputt' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float(inputt())
               ^^^^^^
NameError: name 'inputt' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
8.8
9.2
7.6
---- correct output:
8.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float(inputt())
               ^^^^^^
NameError: name 'inputt' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
8.5
4.9
8.8
---- correct output:
7.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float(inputt())
               ^^^^^^
NameError: name 'inputt' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 17:50:27)
-- CODE: 
n1 = float(input())
n2 = float(input())
n3 = float(input())

ml = n1 * 25/100
mt = n2 * 30/100
mp = n3 * 45/100

nf = (ml + mt + mp)

print(round(nf, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.8
3.2
7.6
---- correct output:
5.58
---- user output:
5.58
-- TEST CASE 2:
---- input:
7.5
5.3
8.6
---- correct output:
7.33
---- user output:
7.33
-- TEST CASE 3:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
6.28
-- TEST CASE 4:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
6.31
-- TEST CASE 5:
---- input:
8.8
9.2
7.6
---- correct output:
8.38
---- user output:
8.38
-- TEST CASE 6:
---- input:
8.5
4.9
8.8
---- correct output:
7.55
---- user output:
7.55
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 17:49:57)
-- CODE: 
n1 = float(inpút())
n2 = float(input())
n3 = float(input())

ml = n1 * 25/100
mt = n2 * 30/100
mp = n3 * 45/100

nf = (ml + mt + mp)

print(round(nf, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.8
3.2
7.6
---- correct output:
5.58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float(inpút())
               ^^^^^
NameError: name 'inpút' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
7.5
5.3
8.6
---- correct output:
7.33
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float(inpút())
               ^^^^^
NameError: name 'inpút' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float(inpút())
               ^^^^^
NameError: name 'inpút' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float(inpút())
               ^^^^^
NameError: name 'inpút' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
8.8
9.2
7.6
---- correct output:
8.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float(inpút())
               ^^^^^
NameError: name 'inpút' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
8.5
4.9
8.8
---- correct output:
7.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = float(inpút())
               ^^^^^
NameError: name 'inpút' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
